# FungusFighter

./: Cargo.toml  NOW  TODO  index.html  reverse.md
assets/: attack.ron  backward.ron  block.ron  death.ron  forward.ron  guard_broken.ron  mirror.sh  recoil.ron  standing.ron
src/: animation.rs  main.rs
src/animation/: data.rs
