[package]
name = "fungus_fighter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = "1.8.0"
bytemuck = "1.14.1"
comfy = "0.3.1"
include_dir = { git = "https://github.com/gmorenz/include_dir", branch = "maybe", features = ["glob"] }
futures-lite = "2.2.0"
ggrs = "0.10.0"
matchbox_socket = { version = "0.8.1", features = ["ggrs"] }
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-futures = "0.4.42"
